ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uniprot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host:
      http:
        paths:
          - path: /kb-rest(/|$)(.*)
            backend:
              serviceName: kb-rest-http
              servicePort: 30299
          - path: /support-rest(/|$)(.*)
            backend:
              serviceName: support-data-rest-http
              servicePort: 30295
          - path: /uniprot/solr/service(/|$)(.*)
            backend:
              serviceName: solr-service
              servicePort: 30080
          - path: /uniprot/voldemort(/|$)(.*)
            backend:
              serviceName: vd-cs
              servicePort: 30185
          - path: /web(/|$)(.*)
            backend:
              serviceName: uniprot-website
              servicePort: 30280
